# ComputerGraphics-Project

./: CMakeLists.txt  README.md  imgui.ini
Models/: LightTextureCube.json
include/: Model.hpp  Scene.hpp  SceneMenu.hpp  camera.hpp  functiontypes.hpp  glwindow.hpp  indexbuffer.hpp  shadermanager.hpp  shaderprogram.hpp  shapecreator.hpp  shapetypes.hpp  texturemanager.hpp  transform.hpp  vertexarrayobject.hpp  vertexbuffer.hpp  vertextypes.hpp
shaders/ColorShader/: fragment.glsl  settings.json  vertex.glsl
shaders/LightTextureShader/: fragment.glsl  settings.json  vertex.glsl
shaders/TextureShader/: settings.json  vertex.glsl
src/: Camera.cpp  Model.cpp  ShaderManager.cpp  Transform.cpp  glwindow.cpp  indexbuffer.cpp  main.cpp  scene.cpp  scenemenu.cpp  shaderprogram.cpp  shapecreator.cpp  texturemanager.cpp  vertexarrayobject.cpp  vertexbuffer.cpp
